// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have an empty queue after clear("all") 1`] = `[]`;

exports[`Should have remove items in class queue after clear("c") 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should have remove items in class queue after clear("class") 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should not mark same item multiple times as local 1`] = `
[
  {
    "command": "stand",
    "locallyControlled": true,
    "properties": {
      "beBound": false,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "stand",
    "locallyControlled": false,
    "properties": {
      "beBound": false,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should not queue commands that are already being queued 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should put items at given position in queue with trackAt 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
    "repeat": false,
  },
  {
    "command": "bamboozle",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should put prepended items first in queue 1`] = `
[
  {
    "command": "bamboozle",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should queue command to in-game queue when added locally and queue is full, but queue ran 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should queue command to in-game queue when added locally and queue not full 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should re-attempt to queue things if first attempt was blocked due to queue being full 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should re-queue things after being queued with dor and run 1`] = `
[MockFunction] {
  "calls": [
    [
      "queue add eb!p!w!t stand",
    ],
    [
      "queue add eb!p!w!t stand",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should recognize own queue item on confirmation in game and mark it accordingly 1`] = `
[
  {
    "command": "stand",
    "locallyControlled": true,
    "properties": {
      "beBound": false,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should remove items at given position in queue with trackRemove 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should remove run command from queue (not first item) 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "boom",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should remove run command from queue 1`] = `
[
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "boom",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should remove run command from queue with different casing 1`] = `
[
  {
    "command": "bar",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "boom",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should replace items at given position in queue with trackReplace 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "bamboozle",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
  {
    "command": "baz",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!b" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveBalance": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!c" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!e" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveEq": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!p" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!s" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!t" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!u" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "!w" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beBound": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "b" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "balance" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "c" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "class" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveClassBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "e" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveEq": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "equilibrium" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveEq": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "free" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "freestand" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "frl" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {},
    "repeat": false,
  },
]
`;

exports[`Should translate property "full" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
      "beStunned": false,
      "haveBalance": true,
      "haveClassBalance": true,
      "haveEq": true,
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "p" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveParalysis": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "paralysis" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveParalysis": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "s" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "haveShipBalance": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "stun" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "t" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStunned": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "u" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beStanding": true,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "unbound" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beBound": false,
    },
    "repeat": false,
  },
]
`;

exports[`Should translate property "w" correctly 1`] = `
[
  {
    "command": "foo",
    "locallyControlled": false,
    "properties": {
      "beBound": true,
    },
    "repeat": false,
  },
]
`;

exports[`Workaround for in-game bug #17807 1`] = `[]`;
